# pydantic-ai-harness

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.local.md  Makefile  PENDING.md  PLAN.md  README.md  pyproject.toml
.github/plan-debate/: ci-plan-debate.mjs  prompts.mjs  web-search.mjs
.github/workflows/: main.yml  plan-debate.yml
docs/: code-execution.md  environments.md
docs/api/: environments.md
examples/: __init__.py
examples/code_execution/: __init__.py  batch_operations.py  follow_the_money.py  github_pr_analysis.py  pr_comment_buckets.py
examples/guardrails/: __init__.py  async_tripwire.py  cost_budget.py  prompt_injection.py  secret_leakage.py  tool_approval.py
meta/: README.md
meta/March 20/: claude-prompt-1.txt  next-steps.md  slack-notes-transcript-1.txt  slack-notes-transcript-2.txt
pydantic_harness/: __init__.py  _python_signature.py
pydantic_harness/capabilities/: __init__.py  code_mode.py  execution_env.py
pydantic_harness/code_mode/: README.md  __init__.py  _capability.py  _toolset.py
pydantic_harness/environments/: __init__.py  (+3 more)
tests/: conftest.py  test_adaptive_reasoning.py  test_approval.py  test_compaction.py  test_environments.py  test_filesystem.py  test_guardrails.py  test_knows_current_time.py  test_memory.py  test_placeholder.py  test_planning.py  test_python_signature.py  test_repo_context_injection.py  test_session_persistence.py  test_shell.py  test_skills.py  test_stuck_loop_detection.py  test_system_reminders.py  test_tool_error_recovery.py  test_tool_output_management.py  test_verification_loop.py
(+39 files in other folders)
